# artem-cyber.com

./: .env.example  .env.production  .eslintrc.json  .gitignore  ACCEPTANCE_CRITERIA.md  ADMIN_COURSES_GUIDE.md  ALL_QUICK_ACTIONS_GUIDE.md  API_FIX_NOTES.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_DIAGRAMS.md  AUTOMATION_GUIDE.md  BOT_SETUP_GUIDE.md  CALLBACK_SYSTEM_SETUP.md  COMPLETE_SETUP_GUIDE.md  COMPLETE_SETUP_INSTRUCTIONS.md  CUSTOMER_DASHBOARD_GUIDE.md  DEPLOYMENT.md  DETAILED_TESTING_REPORT.md  DOMAIN_CONFIGURATION.md  EMAIL_SYSTEM_SPEC.md  ENHANCED_CALLBACK_SYSTEM.md  EXECUTE_SQL_INSTRUCTIONS.md  EXECUTE_USER_ROLES_SQL.md  EXISTING_BOTS_INTEGRATION.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_RLS_FIX.sql  FINAL_SYSTEM_STATUS.md  FINAL_TESTING_GUIDE.md  FIX_GOOGLE_OAUTH_401.md  GIT_BRANCHING_STRATEGY.md  GOOGLE_OAUTH_SETUP.md  GRACE_PERIOD_FINAL_SETUP.md  GRACE_PERIOD_SETUP.md  HOW_TO_UPLOAD_FAVICON.md  IMPLEMENTATION_GUIDE.md  ISSUE_SETUP_INSTRUCTIONS.md  MIGRATION_GUIDE.md  MINI_COURSES_DEPLOYMENT.md  ONLINE_CHAT_IMPLEMENTATION_GUIDE.md  (+125 more)
Solution/GHOST_ENGINE/: .env.example  .geminiignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
Solution/GHOST_ENGINE/alembic/: env.py
Solution/GHOST_ENGINE/config/: __init__.py  base.yaml  browser.yaml  llm.yaml  negotiation_pipeline.yaml  scoring.yaml  telegram_routing.example.yaml
Solution/GHOST_ENGINE/docs/: agent_graphs.md  architecture_supplement.md  essence_latent_demand_and_feed_strategy.md  first_run.md  navigation_module_status.md  (+5 more)
(+642 files in other folders)
