[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghost-engine"
version = "0.1.0"
description = "GHOST_ENGINE — LangGraph + Camoufox automation stack"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "PyYAML>=6.0",
  "httpx>=0.27",
  "aiohttp>=3.9",
  "camoufox[geoip]>=0.4",
  "langgraph>=0.2",
  "langchain-core>=0.3",
  "langchain-openai>=0.2",
  "langchain-google-genai>=2.0",
  "aiogram>=3.4",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "redis>=5.0",
  "structlog>=24.1",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
  "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ghost_engine"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = true
